Fixed spacing issue in MailBody

--- a/public/bootstrap/less/trp2.less
+++ b/public/bootstrap/less/trp2.less
@@ -905,7 +905,7 @@ textarea, input { outline: none; }
 }
 
 .trpMailBody {
-  padding-left: 88px;
+  padding-left: 108px;
   .trpBodyText;
 }
 
